(core) position tab alert on bottom, avoid overflow

--- a/app/scripts/modules/core/presentation/main.less
+++ b/app/scripts/modules/core/presentation/main.less
@@ -1321,6 +1321,8 @@ ul.checkmap {
 .popover.no-padding {
   .popover-content {
     padding: 0;
+    max-height: 50vh;
+    overflow-y: auto;
   }
 }
 
